--- a/src/main/webapp/app/partials/funny-names-detail.html
+++ b/src/main/webapp/app/partials/funny-names-detail.html
@@ -1,15 +1,41 @@
-<div class="modal-header">
-    <h3 class="modal-title">I'm a modal!</h3>
-</div>
-<div class="modal-body">
-    <ul>
-        <li ng-repeat="item in items">
-            <a ng-click="selected.item = item">{{ item }}</a>
-        </li>
-    </ul>
-    Selected: <b>{{ selected.item }}</b>
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-</div>
+<form role="form" class="modal-body" xmlns="http://www.w3.org/1999/html">
+    <div class="clearfix">
+        <label for="code">Code</label>
+        <input class="form-control" id="code" placeholder="Enter code" ng-model="funnyName.code">
+    </div>
+    <div class="clearfix">
+        <label for="name">Name</label>
+        <input class="form-control" id="name" placeholder="Enter name" ng-model="funnyName.name">
+    </div>
+    <div class="checkbox">
+        <label>
+            <input type="checkbox" ng-model="funnyName.enabled"> Enabled
+        </label>
+    </div>
+    <div class="clearfix">
+        <label for="modifiedBy">Modified by</label>
+        <input class="form-control" id="modifiedBy" placeholder="Enter username" ng-model="funnyName.modifiedBy">
+    </div>
+    <div class="clearfix">
+        <label for="datetime">modifiedDate</label>
+
+        <!--<div class="col-md-6">-->
+            <p class="input-group">
+                <!--<input class="form-control" id="datetime" placeholder="modifiedDate" ng-model="funnyName.modifiedDate">-->
+                <input type="text" id="datetime" class="form-control" datepicker-popup="yyyy-MM-dd"
+                       ng-model="funnyName.modifiedDate" is-open="opened" datepicker-options="dateOptions"
+                       date-disabled="false"
+                       ng-required="true" close-text="Close"/>
+                <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="open($event)"><i
+                                class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
+        <!--</div>-->
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+</form>
+
